--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios-curlirize": "^1.3.5",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
     "react": "^18.3.1",
